// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON can work on JSON with Array 1`] = `
{
  "loc": {
    "end": {
      "column": 19,
      "line": 6,
      "offset": 60,
    },
    "start": {
      "column": 14,
      "line": 6,
      "offset": 55,
    },
  },
  "type": "String",
  "value": "bar",
}
`;

exports[`JSON can work on JSON with Array 2`] = `
{
  "loc": {
    "end": {
      "column": 12,
      "line": 6,
      "offset": 53,
    },
    "start": {
      "column": 7,
      "line": 6,
      "offset": 48,
    },
  },
  "type": "String",
  "value": "foo",
}
`;

exports[`JSON can work on JSON with Array 3`] = `"/arr/1/foo"`;

exports[`JSON can work on JSON with Array with empty children 1`] = `"/arr/4"`;

exports[`JSON can work on JSON with a key named meta 1`] = `
{
  "loc": {
    "end": {
      "column": 19,
      "line": 4,
      "offset": 48,
    },
    "start": {
      "column": 15,
      "line": 4,
      "offset": 44,
    },
  },
  "type": "Boolean",
  "value": true,
}
`;

exports[`JSON can work on JSON with a key named meta 2`] = `
{
  "loc": {
    "end": {
      "column": 13,
      "line": 4,
      "offset": 42,
    },
    "start": {
      "column": 5,
      "line": 4,
      "offset": 34,
    },
  },
  "type": "String",
  "value": "isMeta",
}
`;

exports[`JSON can work on JSON with a key named value 1`] = `
{
  "loc": {
    "end": {
      "column": 14,
      "line": 3,
      "offset": 31,
    },
    "start": {
      "column": 12,
      "line": 3,
      "offset": 29,
    },
  },
  "type": "Number",
  "value": 20,
}
`;

exports[`JSON can work on JSON with a key named value 2`] = `
{
  "loc": {
    "end": {
      "column": 10,
      "line": 3,
      "offset": 27,
    },
    "start": {
      "column": 3,
      "line": 3,
      "offset": 20,
    },
  },
  "type": "String",
  "value": "value",
}
`;

exports[`JSON can work on simple JSON 1`] = `
{
  "loc": {
    "end": {
      "column": 15,
      "line": 2,
      "offset": 16,
    },
    "start": {
      "column": 10,
      "line": 2,
      "offset": 11,
    },
  },
  "type": "String",
  "value": "bar",
}
`;

exports[`JSON can work on simple JSON 2`] = `
{
  "loc": {
    "end": {
      "column": 8,
      "line": 2,
      "offset": 9,
    },
    "start": {
      "column": 3,
      "line": 2,
      "offset": 4,
    },
  },
  "type": "String",
  "value": "foo",
}
`;

exports[`JSON can work with unescaped JSON pointers with ~0 1`] = `
{
  "loc": {
    "end": {
      "column": 17,
      "line": 7,
      "offset": 93,
    },
    "start": {
      "column": 16,
      "line": 7,
      "offset": 92,
    },
  },
  "type": "Number",
  "value": 2,
}
`;

exports[`JSON can work with unescaped JSON pointers with ~1 1`] = `
{
  "loc": {
    "end": {
      "column": 17,
      "line": 4,
      "offset": 49,
    },
    "start": {
      "column": 16,
      "line": 4,
      "offset": 48,
    },
  },
  "type": "Number",
  "value": 1,
}
`;

exports[`JSON should not throw error when children is array 1`] = `"/arr/3"`;
